--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
 
   <!-- Contact us -->
   <section class="my-5" style="background-color:rgba(223, 218, 255, 0.3);">
-    <div class="container hidden py-5 size">
+    <div class="container py-5 size">
         <h1 class="text-center lead" style="font-size: 4rem; color: #4b6cb7;">Contact Us</h1>
         <h5 class="text-center lead"> Have any questions? We'd love to here from you</h5>
         <form>
